dataset1235/2025-2/1153765216/users/2719941446/executions/2747719322_1462915504.log
== RUN (2025-08-25 20:10:46)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono: "))

apot=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apot
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:20:23)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:09:57)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono"))

apot=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apot

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:12:22)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono: "))

apotema=(2*math.tan(math.pi/5))*lado
area=5/2*lado*apotema
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:06:51)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:10:17)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono: "))

apot=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apot

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:10:10)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono"))

apot=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apot

print(round(area,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono363.27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:16:08)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado:
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado:
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado:
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado:
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado:
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:22:58)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(lado)/(2 * math.tan(math.pi/5))
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 172.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:09:53)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono"))

apot=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apot

print(round(area,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono363.27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:15:23)
-- CODE: 
import math
lado=float(input(Digite o comprimento do lado do pentágono"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 2
    lado=float(input(Digite o comprimento do lado do pentágono"))
                                                              ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 2
    lado=float(input(Digite o comprimento do lado do pentágono"))
                                                              ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 2
    lado=float(input(Digite o comprimento do lado do pentágono"))
                                                              ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 2
    lado=float(input(Digite o comprimento do lado do pentágono"))
                                                              ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 2
    lado=float(input(Digite o comprimento do lado do pentágono"))
                                                              ^
SyntaxError: unterminated string literal (detected at line 2)
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 2
    lado=float(input(Digite o comprimento do lado do pentágono"))
                                                              ^
SyntaxError: unterminated string literal (detected at line 2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:11:45)
-- CODE: 
import math
lado=float(input("Digite o comprimento do lado do pentágono: "))

apotema=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apotema
print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite o comprimento do lado do pentágono: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite o comprimento do lado do pentágono: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite o comprimento do lado do pentágono: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite o comprimento do lado do pentágono: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite o comprimento do lado do pentágono: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite o comprimento do lado do pentágono: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:21:31)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=lado*(2 * math.tan(math.pi/5))
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:21:02)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(2 * math.tan(math.pi/5))*lado
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:23:12)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(lado)/(2 * math.tan(math.pi/5))
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 139.36
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 61.94
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 208.18
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 110.11
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 27.53
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 172.05
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:18:40)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 363.27
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:15:57)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: ")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
-- ERROR:
File "XXXX", line 2
    lado=float(input("Digite comprimento do lado: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
-- ERROR:
File "XXXX", line 2
    lado=float(input("Digite comprimento do lado: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
-- ERROR:
File "XXXX", line 2
    lado=float(input("Digite comprimento do lado: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
-- ERROR:
File "XXXX", line 2
    lado=float(input("Digite comprimento do lado: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
-- ERROR:
File "XXXX", line 2
    lado=float(input("Digite comprimento do lado: ")
              ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
-- ERROR:
File "XXXX", line 2
    lado=float(input("Digite comprimento do lado: ")
              ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 20:18:36)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(2*math.tan(math.pi/5))*lado
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 294.25
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 130.78
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 439.56
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 232.49
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 58.12
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 363.27
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 20:18:50)
-- CODE: 
import math
lado=float(input("Digite comprimento do lado: "))

apotema=(2*math.tan(math.pi/5))/lado
area=(5/2)*lado*apotema

print(round(area,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
9
---- correct output:
139.36
---- user output:
Digite comprimento do lado: 3.63
-- TEST CASE 2:
---- input:
6
---- correct output:
61.94
---- user output:
Digite comprimento do lado: 3.63
-- TEST CASE 3:
---- input:
11
---- correct output:
208.18
---- user output:
Digite comprimento do lado: 3.63
-- TEST CASE 4:
---- input:
8
---- correct output:
110.11
---- user output:
Digite comprimento do lado: 3.63
-- TEST CASE 5:
---- input:
4
---- correct output:
27.53
---- user output:
Digite comprimento do lado: 3.63
-- TEST CASE 6:
---- input:
10
---- correct output:
172.05
---- user output:
Digite comprimento do lado: 3.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
